Opened 8 years ago
Closed 8 years ago
#12990 closed bug (fixed)
Unreliable drag&drop in BListViews (regression)
Reported by: | humdinger | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev50565.
Since John's changes to implement autoscroll in hrev50495, drag&drop of items within a list often doesn't work anymore. Instead only the selection is moved.
Best seen when you open an icon in Icon-O-Matic and try changing the order of shapes. Or in Locale when moving the order of several preferred languages.
Fix or revert. :)
Change History (3)
comment:1 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:2 by , 8 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Sorry having to open this ticket again. Drag&drop is still an issue when trying to d&d the top item, e.g in the Locale prefs. Put a few languages into the "Preferred" view and try moving the top item. d&d any but the first works OK... Same issue in I-O-M.
comment:3 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed bug with d&d on first item in hrev50621
Thanks Humdinger for reporting!
Fixed in hrev50574